💄 style: update some style

--- a/src/SwashbucklerDiary.Maui/Page/Backups/WebDAVBackups/WebDAVBackups.razor
+++ b/src/SwashbucklerDiary.Maui/Page/Backups/WebDAVBackups/WebDAVBackups.razor
@@ -90,8 +90,7 @@
                      OnChange="SettingChange(Setting.WebDAVCopyResources)"
                      Dense="true"
                      Inset="true"
-                     Color="white"
-                     TrackColor="@MSwitchTrackColor(includeDiaryResources)">
+                     Color="white">
             </MSwitch>
         </MListItemAction>
     </MListItem>
