--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
@@ -48,8 +48,7 @@
                          OnChange="SettingChange(Setting.AchievementsAlert)"
                          Dense="true"
                          Inset="true"
-                         Color="white"
-                         TrackColor="@MSwitchTrackColor(achievementsAlert)">
+                         Color="white">
                 </MSwitch>
             </MListItemAction>
         </MListItem>
