--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -25,8 +25,7 @@
                          OnChange="SettingChange(Setting.DiaryCardIcon)"
                          Dense="true"
                          Inset="true"
-                         Color="white"
-                         TrackColor="@MSwitchTrackColor(diaryCardIcon)">
+                         Color="white">
                 </MSwitch>
             </MListItemAction>
         </MListItem>
