--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -26,8 +26,7 @@
                              OnChange="SettingChange(Setting.Title)"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(title)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
@@ -49,8 +48,7 @@
                              OnChange="SettingChange(Setting.Markdown)"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(markdown)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
