--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
@@ -26,8 +26,7 @@
                              OnChange="SettingChange(Setting.IndexDate)"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(date)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
@@ -47,8 +46,7 @@
                              OnChange="SettingChange(Setting.WelcomeText)"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(welcomText)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
