--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -131,8 +131,7 @@
                              OnChange="SettingChange(Setting.StatisticsCard)"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(showStatisticsCard)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
@@ -182,8 +181,7 @@
                              OnClick="PrivacyClick"
                              Dense="true"
                              Inset="true"
-                             Color="white"
-                             TrackColor="@MSwitchTrackColor(privacy)">
+                             Color="white">
                     </MSwitch>
                 </MListItemAction>
             </MListItem>
