--- a/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Backups/BackupsPage.razor
@@ -21,13 +21,13 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <LocalBackups></LocalBackups>
+            <LocalBackupsPage></LocalBackupsPage>
         </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <WebDAVBackups></WebDAVBackups>
+            <WebDAVBackupsPage></WebDAVBackupsPage>
         </MContainer>
     </SwiperTabItem>
 </SwiperTabItems>
