--- a/src/SwashbucklerDiary.WebAssembly/Page/Export/LANTransferPage.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Export/LANTransferPage.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Rcl.Pages
+﻿@namespace SwashbucklerDiary.WebAssembly.Pages
 @inherits ImportantComponentBase
 
 @(I18n.T("ToDo.Title"))
