♻️ refactor(LAN): refactoring  LAN transmission

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
@@ -17,7 +17,7 @@
             </MButton>
         </MCardTitle>
         <MCardSubtitle Class="py-2">
-            @BytesReceived KB / @TotalBytesToReceive KB
+            @Bytes KB / @TotalBytes KB
         </MCardSubtitle>
          <MCardText>
             <div class="d-flex align-center">
