💄 style: update some style

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -9,7 +9,7 @@
     <MCard Class="fill-height primary-background d-flex flex-column"
            Ripple="false">
         <MToolbar Class="flex-grow-0"
-                  Style="z-index:2;background-color:transparent;"
+                  Style="z-index:2;background-color:transparent !important;"
                   Elevation="0">
             <MButton Icon="true"
                      OnClick="()=>InternalVisibleChanged(false)">
@@ -54,7 +54,7 @@
         </div>
 
         <MToolbar Class="flex-grow-0"
-                  Style="background-color:transparent;"
+                  Style="background-color:transparent !important;"
                   Elevation="0">
         </MToolbar>
     </MCard>
