--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryStatisticsCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryStatisticsCard.razor
@@ -27,7 +27,7 @@
         <MListItemContent>
             <span>
                 @(I18n.T("Statistics.MostWeather")):
-                <MIcon>
+                <MIcon Class="mx-1" Size="20">
                     @(MostWeatherIcon)
                 </MIcon>
                 @(MostWeatherText)
@@ -38,7 +38,7 @@
         <MListItemContent>
             <span>
                 @(I18n.T("Statistics.MostMood")):
-                <MIcon>
+                <MIcon Class="mx-1" Size="20">
                     @(MostMoodIcon)
                 </MIcon>
                 @(MostMoodText)
