--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -57,12 +57,9 @@
     <div>
         @if (afterRender)
         {
-            <div class="px-3 px-sm-1 d-flex align-end">
+            <div class="px-3 mb-sm-1 d-flex align-end">
                 <button class="d-flex align-center text-h6 font-weight-bold" @onclick="()=>showCreateTime=true">
                     @(diary.CreateTime.ToString("d"))
-                    <MIcon Class="ml-2">
-                        mdi-pencil-outline
-                    </MIcon>
                 </button>
 
                 <span class="pl-5 text-subtitle-1">
@@ -73,31 +70,37 @@
                     @(CounterValue())
                 </span>
             </div>
-            <div class="px-2 px-sm-0">
-                <MChip Class="my-2 mr-2"
-                       Outlined="true"
-                       OnClick="()=>showWeather=true">
-                    <MIcon Left>
+            <div>
+                <MButton Style="letter-spacing:unset;"
+                         Text
+                         Rounded
+                         Ripple="false"
+                         OnClick="()=>showWeather=true">
+                    <MIcon Left Size="20">
                         @(WeatherIcon)
                     </MIcon>
                     @WeatherText
-                </MChip>
-                <MChip Class="my-2 mr-2"
-                       Outlined="true"
-                       OnClick="()=>showMood=true">
-                    <MIcon Left>
+                </MButton>
+                <MButton Style="letter-spacing:unset;"
+                         Text
+                         Rounded
+                         Ripple="false"
+                         OnClick="()=>showMood=true">
+                    <MIcon Left Size="20">
                         @(MoodIcon)
                     </MIcon>
                     @MoodText
-                </MChip>
-                <MChip Class="my-2 mr-2"
-                       Outlined="true"
-                       OnClick="()=>showLocation=true">
-                    <MIcon Left>
+                </MButton>
+                <MButton Style="letter-spacing:unset;"
+                         Text
+                         Rounded
+                         Ripple="false"
+                         OnClick="()=>showLocation=true">
+                    <MIcon Left Size="20">
                         mdi-map-marker-outline
                     </MIcon>
-                    @(string.IsNullOrEmpty(SelectedLocation) ? I18n.T("Write.Location") : SelectedLocation)
-                </MChip>
+                    @LocationText
+                </MButton>
             </div>
         }
     </div>
@@ -117,7 +120,7 @@
         </MTextField>
     }
 
-    <div class="write-input-wrap">
+    <div class="write-input-wrap my-sm-3">
         @if (afterRender)
         {
             @if (enableMarkdown)
@@ -125,14 +128,14 @@
                 <MarkdownEdit @ref="markdownEdit"
                               @bind-Value="diary.Content"
                               WrapClass="write-markdown-wrap"
-                              Class="my-sm-4 px-3 rounded-lg write-markdown">
+                              Class="px-3 rounded-lg write-markdown">
                 </MarkdownEdit>
             }
             else
             {
                 <TextareaEdit @ref="textareaEdit"
                               @bind-Value="diary.Content"
-                              Class="my-sm-4 rounded-lg">
+                              Class="rounded-lg">
                 </TextareaEdit>
             }
         }
