--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -51,6 +51,9 @@
 
 <RadioDialog @bind-Value="sortItem"
              @bind-Visible="showSort"
+             OnChange="SortChanged"
+             TItem="string"
+             TItemValue="string"
              Title="@(I18n.T("Share.Sort"))"
              Items="SortItems">
 </RadioDialog>
