--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -281,3 +281,7 @@
         opacity: .24
     }
 }
+
+.m-input--radio-group--row .m-input--radio-group__input {
+    justify-content: space-between;
+}
