🐛 fix: Avatar cannot be previewed

--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Maui.Pages
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialog"
+<MDialogExtension @ref="mDialogExtension"
                   MyValue="Visible"
                   MyValueChanged="VisibleChanged"
                   ContentClass="rounded-lg"
