--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialog"
+<MDialogExtension @ref="mDialogExtension"
                   MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
