--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -24,7 +24,7 @@
                 <MListItemAction>
                     <MAvatar Rounded="@("lg")"
                              Size="32">
-                        <MImage Src="@avatar"></MImage>
+                        <img src="@avatar" />
                      </MAvatar>
                      <MIcon>mdi-chevron-right</MIcon>
                  </MListItemAction>
