--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDavConfigDialog.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Maui.Pages
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialog"
+<MDialogExtension @ref="mDialogExtension"
                   MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
