♻️ refactor: Renaming SelectIconDialog to SelectIDialog

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AlertSettingPage.razor
@@ -56,10 +56,10 @@
 
 </ScrollContainer>
 
-<SelectIconDialog @bind-Visible="showTimeout"
-                  @bind-Value="@Timeout"
-                  Title="@(I18n.T("Setting.Display.Alert.AlertTimeout.Name"))"
-                  Items="timeoutItems"
-                  Text="@(item=>item.Key + "s")"
-                  Mandatory="true">
-</SelectIconDialog>
+<SelectDialog @bind-Visible="showTimeout"
+              @bind-Value="@Timeout"
+              Title="@(I18n.T("Setting.Display.Alert.AlertTimeout.Name"))"
+              Items="timeoutItems"
+              Text="@(item=>item.Key + "s")"
+              Mandatory="true">
+</SelectDialog>
