--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -144,10 +144,10 @@
     </MCard>
 </ScrollContainer>
 
-<SelectIconDialog @bind-Visible="showEditAutoSave"
+<SelectDialog @bind-Visible="showEditAutoSave"
                   @bind-Value="@EditAutoSave"
                   Title="@(I18n.T("Setting.Display.Diary.EditAutoSave.Name"))"
                   Items="editAutoSaveItems"
                   Text="@(item=>item.Key + "s")"
                   Mandatory="true">
-</SelectIconDialog>
+</SelectDialog>
