--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -163,19 +163,19 @@
                   OnSave="SaveSelectTags">
 </SelectTagsDialog>
 
-<SelectIconDialog @bind-Visible="showWeather"
+<SelectDialog @bind-Visible="showWeather"
                   @bind-Value="@SelectedWeather"
                   Title="@(I18n.T("Write.SelectWeather"))"
                   Items="WeatherIcons"
                   Text="@(item=>I18n.T("Weather." + item.Key))">
-</SelectIconDialog>
+</SelectDialog>
 
-<SelectIconDialog @bind-Visible="showMood"
+<SelectDialog @bind-Visible="showMood"
                   @bind-Value="@SelectedMood"
                   Title="@(I18n.T("Write.SelectMood"))"
                   Items="MoodIcons"
                   Text="@(item=>I18n.T("Mood." + item.Key))">
-</SelectIconDialog>
+</SelectDialog>
 
 <SelectLocationDialog @bind-Visible="showLocation"
                       @bind-Value="SelectedLocation">
