🆕 feat: Check for updates at startup

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -17,6 +17,8 @@
                     </MMain>
 
                     <MainLayoutBottomNav Items="NavigationButtons"></MainLayoutBottomNav>
+
+                    <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
                 </ChildContent>
 
                 <ErrorContent>
